--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.7",
     "@reduxjs/toolkit": "^1.9.3",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.4",
@@ -18,6 +19,7 @@
     "next": "13.2.4",
     "pocketbase": "^0.13.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.5"
   }
 }
