--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,4 @@ yarn-error.log*
 .vercel
 # pocketbase
 pocketbase.exe
-pb_data/data.db-shm
-pb_data/data.db-wal
-pb_data/logs.db-shm
-pb_data/logs.db-wal
-pb_data/storage
+pb_data
