--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.4",
     "clsx": "^1.2.1",
+    "devextreme": "22.2.5",
+    "devextreme-react": "22.2.5",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
