--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
+    "nprogress": "^0.2.0",
     "pocketbase": "^0.13.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
