--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pocketbase": "^0.13.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "react-select": "^5.7.3"
   }
 }
